{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "969f6762-e64e-4dd8-a555-4ee8e8208c84",
            "actions": [
                {
                    "name": "MouseMove",
                    "type": "PassThrough",
                    "id": "fccb35ac-a301-47b9-9885-003d3e63417a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "6415b2c5-72a5-4710-be6b-a5e122e1c9e6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5d6dabfa-d84c-4b34-8f53-8086fb709605",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2559cc5-b5f7-4658-a559-665fea7d716f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}